--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <div class="icon-container-extra">
                             <i class="fas fa-info-circle"></i>
                         </div>
-                        <div class="alertextraIncome" >This is extra Div</div>
+                        <div class="alertextraIncome" >Enter numbers only</div>
                     </div>
                 </div>
                 <div class="input-cont">
@@ -98,7 +98,7 @@
                         <div class="icon-container-deduction">
                             <i class="fas fa-info-circle"></i>
                         </div>
-                        <div class="alertDeduction" >This is deduction Div</div>
+                        <div class="alertDeduction" >Enter numbers only</div>
 
                     </div>
                 </div>
